[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codegraph-lite"
version = "0.1.0"
description = "轻量级代码知识图谱智能分析引擎 - 纯Python标准库实现"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["code-analysis", "knowledge-graph", "complexity", "dependency", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
codegraph = "codegraph_lite.__main__:main"

[tool.setuptools.packages.find]
include = ["codegraph_lite*"]
